--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,6 +6,8 @@ body {
 #__next {
   height: 100%;
 }
+.MuiYearPicker-root{ max-height: 200px; }
+
 
 code {
   font-family: 'Public Sans', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
