--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -24,3 +24,8 @@ code:not([class*='language-']):after {
 code[class*='language-'] {
   padding: 0;
 }
+
+.ArrowEmptyData svg{
+  transform: rotate(105deg) scaleY(-1);
+  fill: #fff;
+}
